# engineai_robotics_native_sdk

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build.sh  clear.sh  env.sh  install.sh  run.sh
assets/config/pm01_edu/: mode.yaml
assets/config/pm01_edu/base_state_estimator/: default.yaml
assets/config/pm01_edu/global_options/: default.yaml  release.yaml
assets/config/pm01_edu/google_logger/: default.yaml
assets/config/pm01_edu/joint_motor_transform_runner/: default.yaml
assets/config/pm01_edu/joint_torque_test/: default.yaml
assets/config/pm01_edu/lcm/: default.yaml  robot.yaml
assets/config/pm01_edu/model/: default.yaml
assets/config/pm01_edu/motion_state_estimator/: default.yaml
assets/config/pm01_edu/motor/: default.yaml
assets/config/pm01_edu/parallel_ankle/: default.yaml
assets/config/pm01_edu/passive/: default.yaml
assets/config/pm01_edu/pd_stand/: default.yaml  robot.yaml
assets/config/pm01_edu/rl_dance_example/: default.yaml
assets/config/pm01_edu/rl_walking_example/: default.yaml
assets/config/pm01_edu/ros2_bridge/: default.yaml
assets/config/pm01_edu/task_motion/: default.yaml
assets/resource/: pm01_edu.xml
cmake/: AutoRegisterRunners.cmake  AutoRegisterTransitioners.cmake  Crashpad.cmake  GetAliasNamespace.cmake  GetNamespace.cmake
core/cmake/: EngineAICoreConfig.cmake  EngineAICoreTargets-release.cmake  EngineAICoreTargets.cmake
core/include/app/: app.h
core/include/basic/: basic_runner.h  motion_runner.h  runner_factory.h  runner_registry.h
core/include/math/: constants.h  cross_product.h  eigen_type_traits.h  fast_pose_composition_functions.h  fast_pose_composition_functions_avx2_fma.h  first_order_low_pass_filter.h  hash.h  interpolation.h  kalman_filter.h  mnn_model.h  pd_controller.h  pseudoinverse.h  qp_oases_solver.h  quartic_spline_interpolation.h  quartic_spline_interpolation_so3.h  quintic_spline_interpolation.h  quintic_spline_interpolation_so3.h  ranges.h  roll_pitch_yaw.h  rotation_matrix.h
core/include/model/: contact_wrench_cone.h  contact_wrench_constraint.h  iterative_inverse_kinematics.h  pinocchio_interface.h
core/include/parameter/: global_config_initializer.h  parameter_loader.h  yaml_convertor.h  yaml_node.h  yaml_reader.h
core/include/tool/: concatenate_vector.h  file_reader.h  save_offline_matrix.h  set_environment.h  string_join.h  string_split.h  timer.h  timestamp_generator.h  vector_output.h
core/registry/: auto_register_runners.cc
docker/: .gitignore  generate.sh
docker/dockerfiles/: .bashrc  Dockerfile  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  env.sh
scripts/: build_mujoco.sh  build_ros2_env.sh  env_robot.sh  process_dump.sh  run_mujoco.sh  run_plotjuggler.sh  run_robot.sh  set_imu_tty.sh
scripts/plotjuggler/: common_data_display.xml
simulation/mujoco/: .gitignore  CMakeLists.txt  main.cc
simulation/mujoco/simulate/: CMakeLists.txt
simulation/mujoco/simulate/cmake/: SimulateDependencies.cmake
simulation/mujoco/src/: .gitignore  CMakeLists.txt
simulation/mujoco/src/lcm_interface/: CMakeLists.txt
simulation/mujoco/src/lcm_interface/include/lcm_interface/: lcm_data_store.h  lcm_publisher.h  lcm_subscriber.h  periodic_task.h
simulation/mujoco/src/lcm_interface/src/: lcm_publisher.cc  lcm_subscriber.cc
src/: CMakeLists.txt
src/data/: CMakeLists.txt
src/data/_param/passive_param/: passive_param.h
src/data/_param/pd_stand_param/: pd_stand_param.cc  pd_stand_param.h
src/data/_param/rl_dance_example_param/: rl_dance_example_param.h
src/data/_param/rl_walking_example_param/: rl_walking_example_param.h
src/data/_param/ros2_bridge_param/: ros2_bridge_param.h
src/executor/: CMakeLists.txt  main.cc
src/hardware/: CMakeLists.txt
src/hardware/gamepad/: CMakeLists.txt
src/protocol/: CMakeLists.txt
src/protocol/interface_protocol/: CMakeLists.txt  README.md
src/protocol/interface_protocol/msg/: GamepadKeys.msg  JointMotionPlanRequest.msg  JointMotionPlanState.msg  JointOverrideCommand.msg  LedControl.msg  MotionState.msg  MotionStateRequest.msg  MotorDebug.msg  NodeControl.msg  PowerInfo.msg
src/protocol/interface_protocol/srv/: JointMotionPlanRequest.srv
src/ros2_node/: CMakeLists.txt
src/ros2_node/include/ros2_node/: base_node.h  hardware_interface_node.h  manager_node.h  ros2_message_convertor.h  ros2_node_interface.h
src/ros2_node/src/: base_node.cc  hardware_interface_node.cc  manager_node.cc  ros2_message_convertor.cc  ros2_node_interface.cc
src/runner/: CMakeLists.txt
src/runner/input_command_arbiter/: CMakeLists.txt
src/runner/input_command_arbiter/include/input_command_arbiter/: base_input_adapter.h  gamepad_input_adapter.h  input_command_arbiter_runner.h  virtual_gamepad_input_adapter.h
src/runner/input_command_arbiter/src/: base_input_adapter.cc  gamepad_input_adapter.cc  input_command_arbiter_runner.cc  virtual_gamepad_input_adapter.cc
src/runner/passive/: CMakeLists.txt
src/runner/passive/include/passive/: passive_runner.h
src/runner/passive/src/: passive_runner.cc
src/runner/pd_stand/: CMakeLists.txt
src/runner/pd_stand/include/pd_stand/: pd_stand_runner.h
src/runner/pd_stand/src/: pd_stand_runner.cc
src/runner/rl_dance_example/: CMakeLists.txt
src/runner/rl_dance_example/include/cnpy/: cnpy.cpp  cnpy.h  example1.cpp
src/runner/rl_dance_example/include/rl_dance_example/: rl_dance_example_runner.h  wbt_obs_registry.h
src/runner/rl_dance_example/src/: rl_dance_example_runner.cc  wbt_obs_registry.cc
src/runner/rl_walking_example/: CMakeLists.txt
src/runner/rl_walking_example/include/rl_walking_example/: rl_walking_example_runner.h
src/runner/rl_walking_example/src/: rl_walking_example_runner.cc
src/runner/ros2_bridge/: CMakeLists.txt
src/runner/ros2_bridge/include/ros2_bridge/: ros2_bridge_runner.h
src/runner/ros2_bridge/src/: ros2_bridge_runner.cc
tools/virtual_gamepad/: LICENSE  README.md  requirements.txt  virtual_gamepad.py
tools/virtual_gamepad/core/: lcm_manager.py  singleton_meta.py
tools/virtual_gamepad/ui/: lcm_manager_widget.py  virtual_gamepad_widget.py
(+50 files in other folders)
